--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,6 @@ jobs:
         run: |
           cd $GITHUB_WORKSPACE
           python -m pip install --upgrade pip
-#          pip install -r requirements.txt
+          pip install -r requirements.txt
       - name: Run Tests
         run: python -m unittest test/*.py
